Fixed vertical alignment on footer IE Chrome tested

--- a/www/css/style.less
+++ b/www/css/style.less
@@ -47,7 +47,7 @@ header {
 
 footer {
 	background-color: @themeDarkColor;
-	padding:25px;
+	padding:20px;
 	width: 100%;
 	position: absolute;
 	bottom: 0;
@@ -61,13 +61,7 @@ footer {
 	margin:auto;
 
 	>div.footer {
-		max-width: @fixedWidth;
-		position:relative;
-   		top: 50%;
-    	left: 50%;
-	   	-webkit-transform: translate(-50%, -50%);  
-    	transform: translate(-50%, -50%);   
-
+	
 		>div.stickLeft {
 			float: left;
 
